welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:28: error: ';' expected but 'else' found.
  return else
         ^